--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 			<version>2.4.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<!--            <version>42.2.23</version>-->
+		</dependency>
 	</dependencies>
 
 	<build>
